@@ -23,6 +23,13 @@
     <number>6</number>
    </property>
    <item>
+    <widget class="QCheckBox" name="play_from_start_check" >
+     <property name="text" >
+      <string>&amp;Play files from start</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QCheckBox" name="recursive_check" >
      <property name="text" >
       <string>&amp;Add files in directories recursively</string>
